Fix header spacing on mobile.

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -17,7 +17,6 @@ header {
     text-transform: uppercase;
     @media (max-width: $x-small) {
       font-size: 24px;
-      margin-top: 2em;
     }
   }
   h2 {
